--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/hanandadras/tech-talk#readme",
   "dependencies": {
-    "express-handlebars": "^6.0.3"
+    "connect-session-sequelize": "^7.1.2",
+    "express-handlebars": "^6.0.3",
+    "express-session": "^1.17.2"
   }
 }
